k8s/mlflow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: quay.io/gthomas59800/kto/mlflow:latest
          imagePullPolicy: Always
          args:
            - --host=0.0.0.0
            - --port=8080
            - --backend-store-uri=mysql+mysqldb://ktomlflow:ktomlops@mysql:3306/mlflow
            - --default-artifact-root=s3://mlflow/
            - --workers=2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "400m"
              memory: 512Mi
            limits:
              cpu: "400m"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  selector:
    app: mlflow
  ports:
    - port: 8080
      name: http-port
      targetPort: 8080
---
apiVersion: "route.openshift.io/v1"
kind: Route
metadata:
  name: mlflow
spec:
  host: ""
  path: ""
  port:
    targetPort: 8080
  tls: null
  to:
    kind: Service
    name: mlflow
    weight: 100
